Cambio de ruta de descargas

--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
                     <i class="fa-solid fa-folder-open"></i>
                 </button>
             </div>
-            <p class="text-light">Ruta de Descarga: <strong id="currentPath">C:\Users\scbll\Downloads\Musica</strong>
+            <p class="text-light">Ruta de Descarga: <strong id="currentPath"></strong>
             </p>
             <button type="submit" class="download-button"><b>Descargar</b></button>
         </form>
 
         <div id="result" class="mt-4">
             <div id="fileList" class="mt-4">
-                <h2 class="text-light">Archivos Descargados:</h2>
                 <ul id="files" class="list-unstyled"></ul>
             </div>
         </div>
